클랜 상세 정보 조회 규격 작성 및 리팩토링